--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ release.properties
 
 ### Java ###
 *.class
-
+*.classpath
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
@@ -37,6 +37,7 @@ tmp/
 local.properties
 .settings/
 .loadpath
+*.project
 
 # External tool builders
 .externalToolBuilders/
