the code that in webapp(java) is latest than webstorm content

--- a/TestNGWebApp/src/main/webapp/WEB-INF/web.xml
+++ b/TestNGWebApp/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,15 @@
     <url-pattern>/HelloServlet</url-pattern>
   </servlet-mapping>
   <servlet>
+    <servlet-name>ProjectLoaderServlet</servlet-name>
+    <display-name>ProjectLoaderServlet</display-name>
+    <servlet-class>org.testngwebrunner.app.ProjectLoaderServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ProjectLoaderServlet</servlet-name>
+    <url-pattern>/ProjectLoaderServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
     <servlet-name>WebSocketTestServlet</servlet-name>
     <display-name>WebSocketTestServlet</display-name>
     <servlet-class>org.testngwebrunner.app.WebSocketTestServlet</servlet-class>
