--- a/TestNGWebApp/pom.xml
+++ b/TestNGWebApp/pom.xml
@@ -85,6 +85,11 @@
 			<artifactId>gson</artifactId>
 			<version>2.2.4</version>
 		</dependency>
+		<dependency>
+			<groupId>com.thoughtworks.qdox</groupId>
+			<artifactId>qdox</artifactId>
+			<version>1.12</version>
+		</dependency>
 
 
 
