--- a/com.testng.tests/my.properties
+++ b/com.testng.tests/my.properties
@@ -1,9 +1,10 @@
 #This File is Auto-Genetarted. Do Not Modify!.
-#Wed, 26 Nov 2014 22:56:50 +0200
+#Wed, 26 Nov 2014 23:59:28 +0200
 
-BUILD_TIMESATMP=355
-BUILD_TIME=330 22\:56
+BUILD_TIMESATMP=918
+BUILD_TIME=330 23\:59
 BASE_DIR=D\:\\TestNGProject\\com.testng.tests
+SOURCE_DIR=D\:\\TestNGProject\\com.testng.tests\\src\\main\\java
 JAVA_HOME=C\:\\Program Files\\Java\\jdk1.7.0_25\\jre
 M2_HOME=D\:\\Program files\\apache-maven-3.0.5
 TARGET_DIRECTORY=D\:\\TestNGProject\\com.testng.tests\\target
@@ -11,6 +12,5 @@ CLASSES_DIRECTORY=D\:\\TestNGProject\\com.testng.tests\\target\\classes
 PROJECT_NAME=com.testng.tests
 PROJECT_FINAL_NAME=com.testng.tests-0.0.1-SNAPSHOT
 SYSTEM_LINE_SEPARATOR=\n
-FROM_PARANT=${project.parent.name}
 TEST_CLASSPATH=D\:\\TestNGProject\\com.testng.tests\\target\\test-classes;D\:\\TestNGProject\\com.testng.tests\\target\\classes;D\:\\.m2\\repository\\com\\testng\\infra\\com.testng.infra\\0.0.1-SNAPSHOT\\com.testng.infra-0.0.1-SNAPSHOT.jar;D\:\\.m2\\repository\\org\\testng\\testng\\6.8.8\\testng-6.8.8.jar;D\:\\.m2\\repository\\org\\beanshell\\bsh\\2.0b4\\bsh-2.0b4.jar;D\:\\.m2\\repository\\com\\beust\\jcommander\\1.27\\jcommander-1.27.jar
 RUNTIME_CLASSPATH=D\:\\TestNGProject\\com.testng.tests\\target\\test-classes;D\:\\TestNGProject\\com.testng.tests\\target\\classes;D\:\\.m2\\repository\\com\\testng\\infra\\com.testng.infra\\0.0.1-SNAPSHOT\\com.testng.infra-0.0.1-SNAPSHOT.jar;D\:\\.m2\\repository\\org\\testng\\testng\\6.8.8\\testng-6.8.8.jar;D\:\\.m2\\repository\\org\\beanshell\\bsh\\2.0b4\\bsh-2.0b4.jar;D\:\\.m2\\repository\\com\\beust\\jcommander\\1.27\\jcommander-1.27.jar
