server side is waiting for websocket for execution in clude json

--- a/com.testng.tests/pom.xml
+++ b/com.testng.tests/pom.xml
@@ -94,7 +94,7 @@
 										<entry key="TEST_CLASSPATH" value="${test_classpath}" />
 										<entry key="RUNTIME_CLASSPATH" value="${test_classpath}" />
 										<entry key="RESOURCES_DIR" value="${basedir}${file.separator}src${file.separator}main${file.separator}resources" />
-										<entry key="SUITES_DIR" value="${basedir}${file.separator}src${file.separator}main${file.separator}resources/suites" />
+										<entry key="SUITES_DIR" value="${basedir}${file.separator}src${file.separator}main${file.separator}resources${file.separator}suites" />
 									</propertyfile>
 								</target>
 							</configuration>
