--- a/com.testng.tests/my.properties
+++ b/com.testng.tests/my.properties
@@ -1,8 +1,8 @@
 #This File is Auto-Genetarted. Do Not Modify!.
-#Wed, 26 Nov 2014 23:59:28 +0200
+#Sun, 30 Nov 2014 23:08:23 +0200
 
-BUILD_TIMESATMP=918
-BUILD_TIME=330 23\:59
+BUILD_TIMESATMP=120
+BUILD_TIME=334 23\:08
 BASE_DIR=D\:\\TestNGProject\\com.testng.tests
 SOURCE_DIR=D\:\\TestNGProject\\com.testng.tests\\src\\main\\java
 JAVA_HOME=C\:\\Program Files\\Java\\jdk1.7.0_25\\jre
@@ -14,3 +14,6 @@ PROJECT_FINAL_NAME=com.testng.tests-0.0.1-SNAPSHOT
 SYSTEM_LINE_SEPARATOR=\n
 TEST_CLASSPATH=D\:\\TestNGProject\\com.testng.tests\\target\\test-classes;D\:\\TestNGProject\\com.testng.tests\\target\\classes;D\:\\.m2\\repository\\com\\testng\\infra\\com.testng.infra\\0.0.1-SNAPSHOT\\com.testng.infra-0.0.1-SNAPSHOT.jar;D\:\\.m2\\repository\\org\\testng\\testng\\6.8.8\\testng-6.8.8.jar;D\:\\.m2\\repository\\org\\beanshell\\bsh\\2.0b4\\bsh-2.0b4.jar;D\:\\.m2\\repository\\com\\beust\\jcommander\\1.27\\jcommander-1.27.jar
 RUNTIME_CLASSPATH=D\:\\TestNGProject\\com.testng.tests\\target\\test-classes;D\:\\TestNGProject\\com.testng.tests\\target\\classes;D\:\\.m2\\repository\\com\\testng\\infra\\com.testng.infra\\0.0.1-SNAPSHOT\\com.testng.infra-0.0.1-SNAPSHOT.jar;D\:\\.m2\\repository\\org\\testng\\testng\\6.8.8\\testng-6.8.8.jar;D\:\\.m2\\repository\\org\\beanshell\\bsh\\2.0b4\\bsh-2.0b4.jar;D\:\\.m2\\repository\\com\\beust\\jcommander\\1.27\\jcommander-1.27.jar
+
+RESOURCES_DIR=D\:\\TestNGProject\\com.testng.tests\\src\\main\\resources
+SUITES_DIR=D\:\\TestNGProject\\com.testng.tests\\src\\main\\resources/suites
