execution command line is working

--- a/com.testng.tests/my.properties
+++ b/com.testng.tests/my.properties
@@ -1,8 +1,8 @@
 #This File is Auto-Genetarted. Do Not Modify!.
-#Sun, 30 Nov 2014 23:08:23 +0200
+#Wed, 03 Dec 2014 00:44:25 +0200
 
-BUILD_TIMESATMP=120
-BUILD_TIME=334 23\:08
+BUILD_TIMESATMP=70
+BUILD_TIME=337 00\:44
 BASE_DIR=D\:\\TestNGProject\\com.testng.tests
 SOURCE_DIR=D\:\\TestNGProject\\com.testng.tests\\src\\main\\java
 JAVA_HOME=C\:\\Program Files\\Java\\jdk1.7.0_25\\jre
@@ -16,4 +16,4 @@ TEST_CLASSPATH=D\:\\TestNGProject\\com.testng.tests\\target\\test-classes;D\:\\T
 RUNTIME_CLASSPATH=D\:\\TestNGProject\\com.testng.tests\\target\\test-classes;D\:\\TestNGProject\\com.testng.tests\\target\\classes;D\:\\.m2\\repository\\com\\testng\\infra\\com.testng.infra\\0.0.1-SNAPSHOT\\com.testng.infra-0.0.1-SNAPSHOT.jar;D\:\\.m2\\repository\\org\\testng\\testng\\6.8.8\\testng-6.8.8.jar;D\:\\.m2\\repository\\org\\beanshell\\bsh\\2.0b4\\bsh-2.0b4.jar;D\:\\.m2\\repository\\com\\beust\\jcommander\\1.27\\jcommander-1.27.jar
 
 RESOURCES_DIR=D\:\\TestNGProject\\com.testng.tests\\src\\main\\resources
-SUITES_DIR=D\:\\TestNGProject\\com.testng.tests\\src\\main\\resources/suites
+SUITES_DIR=D\:\\TestNGProject\\com.testng.tests\\src\\main\\resources\\suites
