--- a/com.testng.tests/my.properties
+++ b/com.testng.tests/my.properties
@@ -1,19 +1,19 @@
 #This File is Auto-Genetarted. Do Not Modify!.
-#Tue, 23 Dec 2014 21:49:56 +0200
+#Wed, 24 Dec 2014 08:13:58 +0200
 
-BUILD_TIMESATMP=569
-BUILD_TIME=357 21\:49
-BASE_DIR=D\:\\TestNGProject\\com.testng.tests
-SOURCE_DIR=D\:\\TestNGProject\\com.testng.tests\\src\\main\\java
-JAVA_HOME=C\:\\Program Files\\Java\\jdk1.7.0_25\\jre
-M2_HOME=D\:\\Program files\\apache-maven-3.0.5
-TARGET_DIRECTORY=D\:\\TestNGProject\\com.testng.tests\\target
-CLASSES_DIRECTORY=D\:\\TestNGProject\\com.testng.tests\\target\\classes
+BUILD_TIMESATMP=610
+BUILD_TIME=358 08\:13
+BASE_DIR=C\:\\TestNGProject\\com.testng.tests
+SOURCE_DIR=C\:\\TestNGProject\\com.testng.tests\\src\\main\\java
+JAVA_HOME=C\:\\Program Files\\Java\\jdk1.7.0_51\\jre
+M2_HOME=${env.M2_HOME}
+TARGET_DIRECTORY=C\:\\TestNGProject\\com.testng.tests\\target
+CLASSES_DIRECTORY=C\:\\TestNGProject\\com.testng.tests\\target\\classes
 PROJECT_NAME=com.testng.tests
 PROJECT_FINAL_NAME=com.testng.tests-0.0.1-SNAPSHOT
 SYSTEM_LINE_SEPARATOR=\n
-TEST_CLASSPATH=D\:\\TestNGProject\\com.testng.tests\\target\\test-classes;D\:\\TestNGProject\\com.testng.tests\\target\\classes;D\:\\.m2\\repository\\com\\testng\\infra\\com.testng.infra\\0.0.1-SNAPSHOT\\com.testng.infra-0.0.1-SNAPSHOT.jar;D\:\\.m2\\repository\\org\\testng\\testng\\6.8.8\\testng-6.8.8.jar;D\:\\.m2\\repository\\org\\beanshell\\bsh\\2.0b4\\bsh-2.0b4.jar;D\:\\.m2\\repository\\com\\beust\\jcommander\\1.27\\jcommander-1.27.jar
-RUNTIME_CLASSPATH=D\:\\TestNGProject\\com.testng.tests\\target\\test-classes;D\:\\TestNGProject\\com.testng.tests\\target\\classes;D\:\\.m2\\repository\\com\\testng\\infra\\com.testng.infra\\0.0.1-SNAPSHOT\\com.testng.infra-0.0.1-SNAPSHOT.jar;D\:\\.m2\\repository\\org\\testng\\testng\\6.8.8\\testng-6.8.8.jar;D\:\\.m2\\repository\\org\\beanshell\\bsh\\2.0b4\\bsh-2.0b4.jar;D\:\\.m2\\repository\\com\\beust\\jcommander\\1.27\\jcommander-1.27.jar
+TEST_CLASSPATH=C\:\\TestNGProject\\com.testng.tests\\target\\test-classes;C\:\\TestNGProject\\com.testng.tests\\target\\classes;C\:\\Users\\Administrator\\.m2\\repository\\com\\testng\\infra\\com.testng.infra\\0.0.1-SNAPSHOT\\com.testng.infra-0.0.1-SNAPSHOT.jar;C\:\\Users\\Administrator\\.m2\\repository\\org\\testng\\testng\\6.8.8\\testng-6.8.8.jar;C\:\\Users\\Administrator\\.m2\\repository\\org\\beanshell\\bsh\\2.0b4\\bsh-2.0b4.jar;C\:\\Users\\Administrator\\.m2\\repository\\com\\beust\\jcommander\\1.27\\jcommander-1.27.jar
+RUNTIME_CLASSPATH=C\:\\TestNGProject\\com.testng.tests\\target\\test-classes;C\:\\TestNGProject\\com.testng.tests\\target\\classes;C\:\\Users\\Administrator\\.m2\\repository\\com\\testng\\infra\\com.testng.infra\\0.0.1-SNAPSHOT\\com.testng.infra-0.0.1-SNAPSHOT.jar;C\:\\Users\\Administrator\\.m2\\repository\\org\\testng\\testng\\6.8.8\\testng-6.8.8.jar;C\:\\Users\\Administrator\\.m2\\repository\\org\\beanshell\\bsh\\2.0b4\\bsh-2.0b4.jar;C\:\\Users\\Administrator\\.m2\\repository\\com\\beust\\jcommander\\1.27\\jcommander-1.27.jar
 
-RESOURCES_DIR=D\:\\TestNGProject\\com.testng.tests\\src\\main\\resources
-SUITES_DIR=D\:\\TestNGProject\\com.testng.tests\\src\\main\\resources\\suites
+RESOURCES_DIR=C\:\\TestNGProject\\com.testng.tests\\src\\main\\resources
+SUITES_DIR=C\:\\TestNGProject\\com.testng.tests\\src\\main\\resources\\suites
