--- a/com.testng.tests/my.properties
+++ b/com.testng.tests/my.properties
@@ -1,8 +1,8 @@
 #This File is Auto-Genetarted. Do Not Modify!.
-#Wed, 24 Dec 2014 08:13:58 +0200
+#Wed, 24 Dec 2014 14:34:16 +0200
 
-BUILD_TIMESATMP=610
-BUILD_TIME=358 08\:13
+BUILD_TIMESATMP=613
+BUILD_TIME=358 14\:34
 BASE_DIR=C\:\\TestNGProject\\com.testng.tests
 SOURCE_DIR=C\:\\TestNGProject\\com.testng.tests\\src\\main\\java
 JAVA_HOME=C\:\\Program Files\\Java\\jdk1.7.0_51\\jre
@@ -17,3 +17,5 @@ RUNTIME_CLASSPATH=C\:\\TestNGProject\\com.testng.tests\\target\\test-classes;C\:
 
 RESOURCES_DIR=C\:\\TestNGProject\\com.testng.tests\\src\\main\\resources
 SUITES_DIR=C\:\\TestNGProject\\com.testng.tests\\src\\main\\resources\\suites
+
+CSV_DIR=C\:\\TestNGProject\\com.testng.tests\\src\\main\\resources\\csv
