RMI instead of sockets

--- a/com.testng.tests/my.properties
+++ b/com.testng.tests/my.properties
@@ -1,21 +1,21 @@
 #This File is Auto-Genetarted. Do Not Modify!.
-#Thu, 25 Dec 2014 15:28:37 +0200
+#Fri, 26 Dec 2014 22:25:39 +0200
 
-BUILD_TIMESATMP=9
-BUILD_TIME=359 15\:28
-BASE_DIR=C\:\\TestNGProject\\com.testng.tests
-SOURCE_DIR=C\:\\TestNGProject\\com.testng.tests\\src\\main\\java
-JAVA_HOME=C\:\\Program Files\\Java\\jdk1.7.0_51\\jre
-M2_HOME=${env.M2_HOME}
-TARGET_DIRECTORY=C\:\\TestNGProject\\com.testng.tests\\target
-CLASSES_DIRECTORY=C\:\\TestNGProject\\com.testng.tests\\target\\classes
+BUILD_TIMESATMP=345
+BUILD_TIME=360 22\:25
+BASE_DIR=D\:\\TestNGProject\\com.testng.tests
+SOURCE_DIR=D\:\\TestNGProject\\com.testng.tests\\src\\main\\java
+JAVA_HOME=C\:\\Program Files\\Java\\jdk1.7.0_25\\jre
+M2_HOME=D\:\\Program files\\apache-maven-3.0.5
+TARGET_DIRECTORY=D\:\\TestNGProject\\com.testng.tests\\target
+CLASSES_DIRECTORY=D\:\\TestNGProject\\com.testng.tests\\target\\classes
 PROJECT_NAME=com.testng.tests
 PROJECT_FINAL_NAME=com.testng.tests-0.0.1-SNAPSHOT
 SYSTEM_LINE_SEPARATOR=\n
-TEST_CLASSPATH=C\:\\TestNGProject\\com.testng.tests\\target\\test-classes;C\:\\TestNGProject\\com.testng.tests\\target\\classes;C\:\\Users\\Administrator\\.m2\\repository\\com\\testng\\infra\\com.testng.infra\\0.0.1-SNAPSHOT\\com.testng.infra-0.0.1-SNAPSHOT.jar;C\:\\Users\\Administrator\\.m2\\repository\\org\\testng\\testng\\6.8.8\\testng-6.8.8.jar;C\:\\Users\\Administrator\\.m2\\repository\\org\\beanshell\\bsh\\2.0b4\\bsh-2.0b4.jar;C\:\\Users\\Administrator\\.m2\\repository\\com\\beust\\jcommander\\1.27\\jcommander-1.27.jar;C\:\\Users\\Administrator\\.m2\\repository\\com\\google\\inject\\guice\\3.0\\guice-3.0.jar;C\:\\Users\\Administrator\\.m2\\repository\\javax\\inject\\javax.inject\\1\\javax.inject-1.jar;C\:\\Users\\Administrator\\.m2\\repository\\aopalliance\\aopalliance\\1.0\\aopalliance-1.0.jar;C\:\\Users\\Administrator\\.m2\\repository\\org\\uncommons\\reportng\\1.1.2\\reportng-1.1.2.jar;C\:\\Users\\Administrator\\.m2\\repository\\org\\testng\\testng\\5.0\\testng-5.0-jdk15.jar;C\:\\Users\\Administrator\\.m2\\repository\\ant\\ant\\1.6.5\\ant-1.6.5.jar;C\:\\Users\\Administrator\\.m2\\repository\\junit\\junit\\3.8.1\\junit-3.8.1.jar;C\:\\Users\\Administrator\\.m2\\repository\\velocity\\velocity\\1.4\\velocity-1.4.jar;C\:\\Users\\Administrator\\.m2\\repository\\velocity\\velocity-dep\\1.4\\velocity-dep-1.4.jar
-RUNTIME_CLASSPATH=C\:\\TestNGProject\\com.testng.tests\\target\\test-classes;C\:\\TestNGProject\\com.testng.tests\\target\\classes;C\:\\Users\\Administrator\\.m2\\repository\\com\\testng\\infra\\com.testng.infra\\0.0.1-SNAPSHOT\\com.testng.infra-0.0.1-SNAPSHOT.jar;C\:\\Users\\Administrator\\.m2\\repository\\org\\testng\\testng\\6.8.8\\testng-6.8.8.jar;C\:\\Users\\Administrator\\.m2\\repository\\org\\beanshell\\bsh\\2.0b4\\bsh-2.0b4.jar;C\:\\Users\\Administrator\\.m2\\repository\\com\\beust\\jcommander\\1.27\\jcommander-1.27.jar;C\:\\Users\\Administrator\\.m2\\repository\\com\\google\\inject\\guice\\3.0\\guice-3.0.jar;C\:\\Users\\Administrator\\.m2\\repository\\javax\\inject\\javax.inject\\1\\javax.inject-1.jar;C\:\\Users\\Administrator\\.m2\\repository\\aopalliance\\aopalliance\\1.0\\aopalliance-1.0.jar;C\:\\Users\\Administrator\\.m2\\repository\\org\\uncommons\\reportng\\1.1.2\\reportng-1.1.2.jar;C\:\\Users\\Administrator\\.m2\\repository\\org\\testng\\testng\\5.0\\testng-5.0-jdk15.jar;C\:\\Users\\Administrator\\.m2\\repository\\ant\\ant\\1.6.5\\ant-1.6.5.jar;C\:\\Users\\Administrator\\.m2\\repository\\junit\\junit\\3.8.1\\junit-3.8.1.jar;C\:\\Users\\Administrator\\.m2\\repository\\velocity\\velocity\\1.4\\velocity-1.4.jar;C\:\\Users\\Administrator\\.m2\\repository\\velocity\\velocity-dep\\1.4\\velocity-dep-1.4.jar
+TEST_CLASSPATH=D\:\\TestNGProject\\com.testng.tests\\target\\test-classes;D\:\\TestNGProject\\com.testng.tests\\target\\classes;D\:\\.m2\\repository\\com\\testng\\infra\\com.testng.infra\\0.0.1-SNAPSHOT\\com.testng.infra-0.0.1-SNAPSHOT.jar;D\:\\.m2\\repository\\org\\testng\\testng\\6.8.8\\testng-6.8.8.jar;D\:\\.m2\\repository\\org\\beanshell\\bsh\\2.0b4\\bsh-2.0b4.jar;D\:\\.m2\\repository\\com\\beust\\jcommander\\1.27\\jcommander-1.27.jar;D\:\\.m2\\repository\\com\\google\\inject\\guice\\3.0\\guice-3.0.jar;D\:\\.m2\\repository\\javax\\inject\\javax.inject\\1\\javax.inject-1.jar;D\:\\.m2\\repository\\aopalliance\\aopalliance\\1.0\\aopalliance-1.0.jar;D\:\\.m2\\repository\\org\\uncommons\\reportng\\1.1.2\\reportng-1.1.2.jar;D\:\\.m2\\repository\\org\\testng\\testng\\5.0\\testng-5.0-jdk15.jar;D\:\\.m2\\repository\\ant\\ant\\1.6.5\\ant-1.6.5.jar;D\:\\.m2\\repository\\junit\\junit\\3.8.1\\junit-3.8.1.jar;D\:\\.m2\\repository\\velocity\\velocity\\1.4\\velocity-1.4.jar;D\:\\.m2\\repository\\velocity\\velocity-dep\\1.4\\velocity-dep-1.4.jar
+RUNTIME_CLASSPATH=D\:\\TestNGProject\\com.testng.tests\\target\\test-classes;D\:\\TestNGProject\\com.testng.tests\\target\\classes;D\:\\.m2\\repository\\com\\testng\\infra\\com.testng.infra\\0.0.1-SNAPSHOT\\com.testng.infra-0.0.1-SNAPSHOT.jar;D\:\\.m2\\repository\\org\\testng\\testng\\6.8.8\\testng-6.8.8.jar;D\:\\.m2\\repository\\org\\beanshell\\bsh\\2.0b4\\bsh-2.0b4.jar;D\:\\.m2\\repository\\com\\beust\\jcommander\\1.27\\jcommander-1.27.jar;D\:\\.m2\\repository\\com\\google\\inject\\guice\\3.0\\guice-3.0.jar;D\:\\.m2\\repository\\javax\\inject\\javax.inject\\1\\javax.inject-1.jar;D\:\\.m2\\repository\\aopalliance\\aopalliance\\1.0\\aopalliance-1.0.jar;D\:\\.m2\\repository\\org\\uncommons\\reportng\\1.1.2\\reportng-1.1.2.jar;D\:\\.m2\\repository\\org\\testng\\testng\\5.0\\testng-5.0-jdk15.jar;D\:\\.m2\\repository\\ant\\ant\\1.6.5\\ant-1.6.5.jar;D\:\\.m2\\repository\\junit\\junit\\3.8.1\\junit-3.8.1.jar;D\:\\.m2\\repository\\velocity\\velocity\\1.4\\velocity-1.4.jar;D\:\\.m2\\repository\\velocity\\velocity-dep\\1.4\\velocity-dep-1.4.jar
 
-RESOURCES_DIR=C\:\\TestNGProject\\com.testng.tests\\src\\main\\resources
-SUITES_DIR=C\:\\TestNGProject\\com.testng.tests\\src\\main\\resources\\suites
+RESOURCES_DIR=D\:\\TestNGProject\\com.testng.tests\\src\\main\\resources
+SUITES_DIR=D\:\\TestNGProject\\com.testng.tests\\src\\main\\resources\\suites
 
-CSV_DIR=C\:\\TestNGProject\\com.testng.tests\\src\\main\\resources\\csv
+CSV_DIR=D\:\\TestNGProject\\com.testng.tests\\src\\main\\resources\\csv
