before RMI revolution, all worked, now second run not exec

--- a/TestNGWebApp/pom.xml
+++ b/TestNGWebApp/pom.xml
@@ -81,6 +81,11 @@
 			<version>6.8.8</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity</artifactId>
+			<version>1.7</version>
+		</dependency>
+		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.2.4</version>
